<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        style="@style/TitleContainer">

        <ImageView style="@style/Plus" />

        <TextView
            style="@style/Title"
            android:text="@string/app_name"/>

    </FrameLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_nearby"
            style="@style/KacButton"
            android:text="@string/nearby"/>

        <Button
            android:id="@+id/button_ambulance"
            style="@style/KacButton"
            android:text="@string/ambulance"/>

        <Button
            android:id="@+id/button_share"
            style="@style/KacButton"
            android:text="@string/share"/>

        <Button
            android:id="@+id/button_order"
            style="@style/KacButton"
            android:text="@string/order"/>

    </LinearLayout>

    <ImageView android:id="@+id/logo_dw"
        style="@style/Logo"/>

</LinearLayout>
